# smokescreen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  release.yml
docs/: CI_SETUP.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  SETUP.md
docs/assets/: _hero.html
infra/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
scripts/: check  check_runbook_shell.py  dev.sh  import_ca_registry.py  render_hero.py
src/smokescreen/: api.py  cli.py  config.py  dashboard.html  identity_docs.py  models.py  version.py
src/smokescreen/ai/: classifier.py  composer.py  prompts.py  response_composer.py
src/smokescreen/brokers/: brokers.yaml  registry.py
src/smokescreen/email/: client.py  oauth.py  reply_parser.py  templates.py
src/smokescreen/jobs/: outreach.py  poll.py
src/smokescreen/state/: broker_selections.py  firestore.py  machine.py  selection_size.py  sqlite.py  store.py
tests/: test_api.py  test_broker_registry.py  test_broker_selections.py  test_check_runbook_shell.py  test_classifier.py  test_config.py  test_csv_import.py  test_email_client.py  test_extended_stats.py  test_firestore_store.py  test_import_ca_registry.py  test_infra_terraform.py  test_models.py  test_oauth.py  test_outreach.py  test_poll.py  test_reply_parser.py  test_rerequest.py  test_response_composer.py  test_selection_size.py  test_sqlite_store.py  test_state_machine.py  test_templates.py  test_version.py  test_whitelist.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.test.tsx  App.tsx  main.tsx  router.tsx  styles.css
web/src/components/: broker-inspect.test.tsx  broker-inspect.tsx  poll-now-button.tsx  state-timeline.test.tsx  state-timeline.tsx  status-state.tsx  trusted-senders-section.tsx
web/src/lib/: api.ts  needs-attention.ts  queries.ts
web/src/pages/: BrokerRegistryPage.tsx  DesignSystemPage.tsx  OnboardingPage.tsx  (+3 more)
web/tests/: needs-attention.test.mjs
(+14 files in other folders)
