[project]
name = "smokescreen"
version = "0.32.0"
description = "Data broker opt-out automation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-run>=0.16.0",
    "google-cloud-secret-manager>=2.17.0",
    "google-genai>=2.10.0",
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "structlog>=23.2.0",
    "fastapi>=0.109.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.25.0",
    "google-cloud-storage>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.12.1",
    "playwright>=1.61.0",
    "pre-commit>=4.5.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.14.14",
]

[project.scripts]
smokescreen = "smokescreen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smokescreen"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.32.0"
tag_format = "v$version"

[tool.pytest.ini_options]
testpaths = ["tests"]
